--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "object-sizeof": "^1.6.3",
-    "socket.io-client": "^4.5.0"
+    "socket.io-client": "^4.5.0",
+    "spriteling": "^1.1.5"
   }
 }
