--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/ifvisible": "^1.1.0",
+    "ifvisible.js": "^1.0.6",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0"
   }
