--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "scripts": {
     "start": "node server/dist/server/main.js",
     "test": "npm --prefix ./client/ run build && nodemon server/main.ts",
-    "deploy": "cd server && tsc && cd .. && npm --prefix ./client/ run build && gcloud app deploy"
+    "deploy": "cd server && tsc && cd .. && npm --prefix ./client/ run build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/uuid": "^8.3.4",
     "express": "^4.17.3",
     "socket.io": "^4.5.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
