--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "vite": "^2.9.5"
   },
   "dependencies": {
+    "express": "^4.18.1",
     "object-sizeof": "^1.6.3",
     "socket.io-client": "^4.5.0",
     "spriteling": "^1.1.5"
